Fixed CSS to look better on smaller monitors

--- a/src/App.css
+++ b/src/App.css
@@ -81,32 +81,39 @@ li:has(> a.active) {
   flex-basis: 33.33333%;
   border-style: solid;
   border-color: #373c3e;
-  border-width: 5px 5vw 15px 5vw;
+  border-width: 5px 2vw 5px 2vw;
 
   background-color: #17191a;
   color: #ffffff;
 }
 
-.column img {
-  width: 100%;
-  max-height: 500px;
+.column:nth-child(1n+7) {
+  border-bottom-width: 15px;
 }
 
 .card {
   display: flex;
 }
 
-/* .poster {
-  flex-basis: 70%;
-} */
+.poster {
+  width: 60%;
+  /* height: 55vh; */
+}
+
+.poster img {
+  width: 100%;
+  /* height: 100%; */
+}
 
 .info {
+  width: 40%;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  font-size: 1rem;
 }
 
-.info h3 {
+.info h2 {
   flex-basis: 5%;
 }
 
